# Bloom

./: .gitignore  LICENSE  README.md  README.ru.md  index.html  miniplayer.html  overlay.html  package-lock.json  package.json  picture-in-picture.html  tray-popup.html  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: main.tsx  vite-env.d.ts
src-tauri/: .env.example  COMMANDS.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  miniplayer.json  overlay.json  tray-popup.json
src-tauri/icons/: icon.icns
src-tauri/icons/thumb/: make_ico.py
src-tauri/src/: audio_proxy.rs  autostart.rs  commands.rs  config.rs  cover_server.rs  discord_rpc.rs  events.rs  file_protocol.rs  folder_watcher.rs  global_hotkey.rs  lib.rs  logger.rs  lyrics_service.rs  mirror.rs  overlay.rs  pipe.rs  smtc.rs  soundcloud.rs  spotify.rs  thumb_toolbar.rs  tray.rs  updater.rs  window_chrome.rs  yandex.rs  ytm.rs
src/app/: App.tsx  Sidebar.tsx  TitleBar.tsx  navigationStore.ts  useDeepLinkBridge.ts  useFullscreenHotkey.ts  useGlobalHotkeys.ts  useOverlayBridge.ts
src/app/pages/: DiscoverSections.tsx  HomePage.tsx  StatsModal.tsx
src/db/: history.ts  shown.ts  track-meta.ts
src/features/customization/: index.ts
src/features/games/: index.ts
src/features/lastfm/: index.ts
src/features/lyrics/: index.ts
src/features/offline/: index.ts
src/features/onboarding/: index.ts
src/features/quick-wheel/: index.ts
src/features/settings/: index.ts
src/features/soundcloud/: index.ts
src/features/spotify/: index.ts
src/features/wave/: index.ts
src/features/yandex/: index.ts
src/features/ytmusic/: index.ts
src/shared/hooks/: index.ts  usePopupOpenAnimation.ts  useTauriEvent.ts  useThemeSettings.ts  useTrackRowMarquee.ts
src/shared/i18n/: dict.ts  i18nStore.ts  index.ts
src/shared/lib/: badgePrefs.ts  buildShareCard.ts  enterAnimation.ts  localFile.ts  parseArtists.ts  pathActions.ts  useSortable.ts  useWindowedList.ts
src/shared/styles/: animations.css  audio-theme.css  base.css  big-picture.css  eq.css  globals.css  home.css  index.css  library.css  lyrics.css  merge-playlists.css  modals.css  notifications.css  onboarding-search.css  onboarding.css  overrides-main.css  player.css  queue.css  quick-wheel.css  root.css  search-misc.css  (+7 more)
src/wave/: engine.ts  feedback.ts  host.ts  index.ts  scoring.ts  seeds.ts  session.ts  sources.ts  types.ts  yandex.ts
update-notes/: update-notes.json
(+236 files in other folders)
