[package]
name = "bloom"
version = "1.0.1"
description = "Bloom Music Player"
authors = ["Bloom"]
edition = "2021"

[lib]
name = "bloom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri core ---
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }

# --- Tauri plugins ---
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"

# --- Async / HTTP ---
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Logging (ротация по размеру, 2 MB) ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
file-rotate = "0.7"

# --- Discord RPC ---
tiny_http = "0.12"
discord-rich-presence = "0.2"

# --- File system watch ---
notify = "6"

# --- Audio metadata (замена TagLib#) ---
lofty = "0.21"

# --- Filesystem walk + MD5 (для стабильных ID локальных треков) ---
walkdir = "2"
md-5 = "0.10"
sha2 = "0.10"
html-escape = "0.2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }

# --- URL helpers ---
url = "2"
urlencoding = "2"
percent-encoding = "2"

# --- Time / IDs ---
chrono = { version = "0.4", features = ["serde"] }

# --- Утилиты ---
once_cell = "1"
parking_lot = "0.12"
anyhow = "1"
thiserror = "1"
regex = "1"

# --- Windows API ---
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_Storage_EnhancedStorage",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Media",
    "Media",
    "Media_Control",
    "Media_Playback",
    "Foundation",
    "Storage_Streams",
] }
windows-core = "0.58"
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
